--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
           if [[ $upstreamLatestTag != $thisLatestTag ]]; then
             echo "NeedToSync=true" >> $GITHUB_ENV
           fi
+          echo "NeedToSync=true" >> $GITHUB_ENV
           echo "RELEASE_NAME=$upstreamLatestTag" >> $GITHUB_ENV
           echo "TAG_NAME=$upstreamLatestTag" >> $GITHUB_ENV
         shell: bash
