--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           upstreamLatestTag=$(curl -sSL --connect-timeout 5 --retry 5 -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/v2fly/domain-list-community/releases/latest | grep "tag_name" | cut -d\" -f4)
           thisLatestTag=$(curl -sSL --connect-timeout 5 --retry 5 -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{ github.repository }}/releases/latest | grep "tag_name" | cut -d\" -f4)
+          echo $thisLatestTag
           echo "NeedToSync=true" >> $GITHUB_ENV
           echo "RELEASE_NAME=$upstreamLatestTag" >> $GITHUB_ENV
           echo "TAG_NAME=$upstreamLatestTag" >> $GITHUB_ENV
